dark mode revert to google maps with dark filter & firefox main page team logo fix

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -95,7 +95,7 @@ a, a:hover {
     font-size: 0.9rem;
     padding: 0 0 5px 10px;
 }
-.main-where iframe, .main-video iframe, #map {
+.main-where iframe, .main-video iframe {
     width: 100%;
     height: 250px;
     margin: 0 auto;
@@ -1190,8 +1190,9 @@ input[invalid-input] {
       display: block;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
-      background-size: 72px 72px;
+      background-size: 100%;
       padding-left: 72px;
+      height: 72px;
   }
   .team1 {
       background: url(/logo/logo1-dark.png) no-repeat;
@@ -1241,7 +1242,7 @@ input[invalid-input] {
       height: 90px;
   }
   .main-where iframe {
-      display: none;
+      filter: contrast(100%) brightness(30%);
   }
   .results-container {
       background: var(--main-sf-color);
